--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: python
 python:
 - 3.6
 before_script:
-- pip install Django
-- pip install djangorestframework
+- pip install -r requirements.txt
 
 script:
 - python manage.py test
